--- a/transport-logistic/scss/style.css
+++ b/transport-logistic/scss/style.css
@@ -75,7 +75,7 @@ textarea {
   height: 100%;
 }
 
-.bg__image img, .social__item img img, .item__image img, .tophead__logo img {
+.item__image-card img, .bg__image img, .social__item img img, .item__image img, .tophead__logo img {
   width: 100%;
   height: 100%;
 }
@@ -88,7 +88,6 @@ textarea {
 }
 
 body {
-  background-color: #6f83ab;
   font-family: "Krub", sans-serif;
   font-size: 1.125rem;
   line-height: 1.2;
@@ -135,7 +134,7 @@ body {
     padding: 0.9375rem 0;
   }
   .menu-open .header__top {
-    padding-bottom: 5.625rem;
+    padding-bottom: 5rem;
   }
 }
 .tophead {
@@ -251,12 +250,17 @@ body {
 }
 
 .mainhead {
-  background-color: rgba(255, 255, 255, 0.08);
+  background-color: rgba(9, 18, 66, 0.65);
   min-height: 4.875rem;
 }
 @media (max-width: 62.99875em) {
   .mainhead {
     min-height: 3rem;
+  }
+}
+@media (max-width: 61.31125em) {
+  .mainhead {
+    min-height: 0;
   }
 }
 .mainhead__container {
@@ -291,13 +295,25 @@ body {
 .menu__submenu {
   position: absolute;
   top: 100%;
-  left: 0;
-  padding-top: 0.5625rem;
+  left: -50%;
+  padding-top: 2.1875rem;
   visibility: hidden;
   opacity: 0;
   transition: all 0.4s ease;
   transform: translate(0, 0.625rem);
   pointer-events: none;
+}
+@media (max-width: 61.31125em) {
+  .submenu-open .menu__submenu {
+    top: 0;
+    left: 0;
+    position: relative;
+    visibility: visible;
+    opacity: 1;
+    padding-top: 0.3125rem;
+    transform: translate(0, 0);
+    pointer-events: auto;
+  }
 }
 
 @media (max-width: 61.31125em) {
@@ -309,7 +325,7 @@ body {
     left: 0;
     transition: bottom 0.3s;
     background: rgba(9, 18, 66, 0.85);
-    padding: 11.875rem 0.9375rem 0.625rem 50%;
+    padding: 11.875rem 1.5625rem 0.625rem 50%;
     overflow: auto;
     z-index: 49;
   }
@@ -332,15 +348,10 @@ body {
   column-gap: 3.75rem;
   z-index: 49;
 }
-@media (max-width: 62.99875em) {
-  .nav__list {
-    column-gap: 2.1875rem;
-  }
-}
 @media (max-width: 61.31125em) {
   .nav__list {
     flex-direction: column;
-    row-gap: 1.25rem;
+    row-gap: 1.5625rem;
     text-align: right;
   }
 }
@@ -370,7 +381,7 @@ body {
   content: "";
   display: inline-block;
   position: absolute;
-  top: 51%;
+  top: 0.625em;
   left: 147%;
   flex: 0 1 1.1875rem;
   width: 1.1875rem;
@@ -379,13 +390,17 @@ body {
   border: 1px solid rgba(255, 255, 255, 0.2);
 }
 @media (max-width: 62.99875em) {
-  .nav__item:after {
-    left: 100%;
+  .menu-open .nav__item:after {
+    left: 101%;
+    border: 1px solid rgba(255, 255, 255, 0.45);
+  }
+  .nav__item:before {
+    display: none;
   }
 }
 @media (max-width: 61.31125em) {
   .nav__item {
-    font-size: 1.375rem;
+    font-size: 1.5625rem;
   }
 }
 @media (any-hover: hover) {
@@ -407,8 +422,61 @@ body {
     transition: all 0.3s;
   }
 }
+@media (any-hover: hover) {
+  .nav__item--arrow:hover .menu__submenu {
+    opacity: 1;
+    transform: translate(0, -0.625rem);
+    visibility: visible;
+    pointer-events: all;
+  }
+}
+.nav__link {
+  display: inline-flex;
+  column-gap: 0.3125rem;
+  align-items: center;
+}
+.nav__icon {
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: 0.125rem;
+  vertical-align: middle;
+  border-top: 0.25rem dashed;
+  border-right: 0.25rem solid transparent;
+  border-left: 0.25rem solid transparent;
+}
+
+.submenu__list {
+  text-align: left;
+  min-width: 15rem;
+  background-color: rgba(9, 18, 66, 0.65);
+}
+@media (max-width: 61.31125em) {
+  .submenu__list {
+    text-align: right;
+    background-color: inherit;
+  }
+}
+@media (any-hover: hover) {
+  .submenu__item:hover .submenu__link {
+    background-color: rgba(131, 141, 171, 0.6);
+  }
+}
+.submenu__item:not(:last-child) {
+  margin-bottom: 0.125em;
+}
+.submenu__link {
+  display: block;
+  padding: 0.8125rem 0.8125rem 0.8125rem 1.875rem;
+}
+
 .side-info__social {
   column-gap: 1.375rem;
+}
+@media (max-width: 61.31125em) {
+  .side-info__social {
+    display: none;
+  }
 }
 .side-info__link {
   display: inline-block;
@@ -421,12 +489,14 @@ body {
   line-height: 1.3;
   text-align: center;
   text-transform: capitalize;
-  transition: color 0.4s;
+  transition: all 0.3s ease;
   z-index: 50;
+  position: relative;
+  overflow: hidden;
 }
 @media (any-hover: hover) {
   .side-info__link:hover {
-    background-color: rgba(9, 18, 66, 0.66);
+    background-color: rgba(9, 18, 66, 0.54);
     color: rgba(255, 255, 255, 0.96);
   }
 }
@@ -444,6 +514,12 @@ body {
   }
 }
 @media (max-width: 31.93625em) {
+  .side-info__link {
+    padding: 0.6875em 0.75em;
+    right: 4.6875em;
+  }
+}
+@media (max-width: 24.81125em) {
   .side-info__link {
     display: none;
   }
@@ -528,33 +604,238 @@ body {
 .social__item {
   display: inherit;
   flex-shrink: 0;
-  transition: all 0.4s;
+  transition: all 0.3s ease;
+  transform: scale(1.002);
 }
 .social__item img {
   width: 1.1875rem;
   height: 1.1875rem;
   flex: 0 1 1.1875rem;
 }
+@media (any-hover: hover) {
+  .social__item:hover {
+    transform: scale(1.2);
+  }
+  .social__item:hover:before {
+    content: "";
+    background-color: rgba(9, 18, 66, 0.65);
+    padding: 1.0625rem;
+    text-align: center;
+    border-radius: 8%;
+    position: absolute;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    top: -0.375em;
+    left: -0.375em;
+  }
+}
 
 .page {
-  padding: 8.75rem 0;
+  padding-top: 9.375rem;
 }
+@media (max-width: 62.99875em) {
+  .page {
+    padding-top: 3.6875rem;
+  }
+}
+.page__services {
+  padding: 6rem 0;
+}
+
 .hero {
   position: relative;
   z-index: 5;
-  min-height: calc(100dvh - 11.0625rem);
+  min-height: calc(100dvh - 11.875rem);
 }
-.hero__container {
-  max-width: 181.25rem;
-}
-.hero__background {
-  padding-top: 8.25rem;
+.hero__info {
+  position: relative;
 }
 
 .bg__image {
   background-color: rgb(9, 18, 66);
   object-position: center;
   object-fit: cover;
+}
+
+.info__body {
+  color: rgba(255, 255, 255, 0.96);
+  max-width: 30.3125rem;
+  padding-top: 9.375rem;
+  padding-bottom: 9.375rem;
+}
+
+.body-hero__title {
+  min-width: calc(50% + 0.5625rem);
+  background: rgba(4, 28, 55, 0.5);
+}
+.body-hero__title:not(:last-child) {
+  margin-bottom: 1.0625rem;
+}
+.body-hero__subtitle {
+  font-family: "Rubik", sans-serif;
+  font-size: 3.75rem;
+  font-weight: 700;
+  line-height: 1.1;
+}
+.body-hero__subtitle:not(:last-child) {
+  margin-bottom: 1.25rem;
+}
+.body-hero > p {
+  font-family: "Krub", sans-serif;
+  font-size: 0.875rem;
+}
+.body-hero > p:not(:last-of-type) {
+  margin-bottom: 0.75rem;
+}
+.body-hero > p:not(:last-child) {
+  margin-bottom: 1.6875rem;
+}
+.body-hero__link {
+  flex-shrink: 0;
+  display: inline-block;
+  padding: 1.1875em 2.125em;
+  color: rgb(35, 33, 42);
+  font-family: "Krub", sans-serif;
+  font-size: 1rem;
+  font-weight: 600;
+  line-height: 1.3;
+  text-transform: capitalize;
+  transition: all 0.8s;
+  background: linear-gradient(126.56deg, rgb(255, 182, 41) -1.21%, rgb(255, 218, 86) 58.664%, rgb(255, 215, 166) 116.841%);
+  position: relative;
+  z-index: 5;
+  overflow: hidden;
+}
+.body-hero__link:after {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  pointer-events: none;
+  width: 12.875rem;
+  height: 12.875rem;
+  left: 4.625rem;
+  right: -5.375rem;
+  top: -2.6875rem;
+  bottom: -6.4375rem;
+  border-radius: 50%;
+  background: rgba(255, 255, 255, 0.96);
+  opacity: 0;
+  transform: scaleX(0);
+  transform-origin: right;
+  transition: transform 0.6s, opacity 1.3s;
+}
+@media (any-hover: hover) {
+  .body-hero__link:hover::after {
+    content: "";
+    opacity: 1;
+    transform: scaleX(1);
+  }
+}
+@media (any-hover: none) {
+  .body-hero__link:active::after {
+    content: "";
+    opacity: 1;
+    transform: scaleX(1);
+    transition: transform 0s, opacity 0s;
+  }
+}
+
+.title {
+  display: inline-flex;
+  align-items: center;
+  column-gap: 0.5625rem;
+  justify-content: start;
+  text-transform: capitalize;
+  font-family: "Rubik", sans-serif;
+  font-size: 0.875rem;
+}
+.title:before {
+  content: "";
+  flex: 0 1 0.25rem;
+  width: 0.25rem;
+  height: 1.4375rem;
+  background: linear-gradient(126.56deg, rgb(255, 182, 41) 20.708%, rgb(255, 218, 86) 66.546%, rgb(255, 215, 166) 111.085%);
+}
+
+.services__container {
+  display: flex;
+  column-gap: 2.5rem;
+}
+.services__cards {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  row-gap: 4.375rem;
+  column-gap: 4.375rem;
+}
+
+.body {
+  max-width: 18.4375rem;
+  min-height: 5.875rem;
+}
+.body__title {
+  min-width: calc(30% + 0.5625rem);
+  background: rgba(232, 232, 232, 0.5);
+  color: rgb(28, 31, 53);
+}
+.body__title:not(:last-child) {
+  margin-bottom: 1.0625rem;
+}
+.body__subtitle-serv {
+  color: rgb(28, 31, 53);
+  font-family: "Rubik", sans-serif;
+  font-size: 2.1875rem;
+  font-weight: 600;
+  line-height: 1.1;
+}
+
+.card__item {
+  display: flex;
+  align-items: center;
+  column-gap: 3.125rem;
+}
+
+.item__image-card {
+  flex: 0 1 4.6875rem;
+  width: 4.6875rem;
+  height: 7.1875rem;
+  object-fit: contain;
+  object-position: center;
+}
+.item__info {
+  max-width: 16.875rem;
+  position: relative;
+}
+.item__info:before {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  top: 3.125em;
+  right: 90%;
+  flex: 0 1 6.25rem;
+  width: 6.25rem;
+  height: 0.03125rem;
+  transform: rotate(90deg);
+  border: 1px solid rgb(216, 216, 216);
+}
+.item__info p {
+  color: rgb(102, 108, 137);
+  font-family: "Krub", sans-serif;
+  font-size: 1rem;
+  font-weight: 500;
+  line-height: 1.5;
+}
+.item__info p:not(:last-of-type) {
+  margin-bottom: 0.5625rem;
+}
+
+.info__about {
+  color: rgb(28, 31, 53);
+  font-family: "Rubik", sans-serif;
+  font-size: 1.5625rem;
+}
+.info__about:not(:last-child) {
+  margin-bottom: 0.8125rem;
 }
 
 /*# sourceMappingURL=style.css.map */
