--- a/transport-logistic/scss/style.scss
+++ b/transport-logistic/scss/style.scss
@@ -10,7 +10,6 @@
 //-----------------------------BODY.WRAPPER------------------------
 //-----------------------------------------------------------------
 body {
-  background-color: #6f83ab;
   font-family: $basic-font;
   font-size: $basic-fz;
   line-height: $basic-lh;
@@ -61,7 +60,7 @@ body {
     @media (max-width: $tablet-breakpoint) {
       padding: toRem(15) 0;
       .menu-open & {
-        padding-bottom: toRem(90);
+        padding-bottom: toRem(80);
       }
     }
   }
@@ -209,11 +208,16 @@ body {
 }
 
 .mainhead {
-  background-color: $bg-gray;
+  background-color: rgba(9, 18, 66, 0.65);
   min-height: toRem(78);
 
   @media (max-width: toEm(1007.98)) {
     min-height: toRem(48);
+    //background-color: rgba(9, 18, 66, 0.84);
+  }
+
+  @media (max-width: $tablet-breakpoint) {
+    min-height: 0;
   }
   // .mainhead__container
   &__container {
@@ -258,13 +262,26 @@ body {
   &__submenu {
     position: absolute;
     top: $full-percentage;
-    left: 0;
-    padding-top: toRem(9);
+    left: -50%;
+    padding-top: toRem(35);
     visibility: hidden;
     opacity: 0;
     transition: $main-transition;
     transform: translate(0, toRem(10));
     pointer-events: none;
+
+    @media (max-width: $tablet-breakpoint) {
+      .submenu-open & {
+        top: 0;
+        left: 0;
+        position: relative;
+        visibility: visible;
+        opacity: 1;
+        padding-top: toRem(5);
+        transform: translate(0, 0);
+        pointer-events: auto;
+      }
+    }
   }
 }
 
@@ -277,7 +294,7 @@ body {
     left: 0;
     transition: bottom 0.3s;
     background: rgba(9, 18, 66, 0.85);
-    padding: toRem(190) toRem(15) toRem(10) 50%;
+    padding: toRem(190) toRem(25) toRem(10) 50%;
     overflow: auto;
     z-index: 49;
 
@@ -304,13 +321,13 @@ body {
     column-gap: toRem(60);
     z-index: 49;
 
-    @media (max-width: toEm(1007.98)) {
-      column-gap: toRem(35);
-    }
+    //@media (max-width: toEm(1007.98)) {
+    //  column-gap: toRem(35);
+    //}
 
     @media (max-width: $tablet-breakpoint) {
       flex-direction: column;
-      row-gap: toRem(20);
+      row-gap: toRem(25);
       text-align: right;
     }
   }
@@ -343,7 +360,7 @@ body {
       content: '';
       display: inline-block;
       position: absolute;
-      top: 51%;
+      top: toEm(10);
       left: 147%;
       flex: 0 1 toRem(19);
       width: toRem(19);
@@ -354,12 +371,20 @@ body {
 
     @media (max-width: toEm(1007.98)) {
       &:after {
-        left: 100%;
+        .menu-open & {
+          left: 101%;
+          border: 1px solid rgba(255, 255, 255, 0.45)
+        }
+      }
+
+
+      &:before {
+        display: none;
       }
     }
 
     @media (max-width: $tablet-breakpoint) {
-      font-size: toRem(22);
+      font-size: toRem(25);
     }
 
     //@media(any-hover: none) {
@@ -398,28 +423,75 @@ body {
         transition: all 0.3s;
       }
     }
+
     // .nav__item--arrow
     &--arrow {
+      @media (any-hover: hover) {
+        &:hover {
+          .menu__submenu {
+            opacity: 1;
+            transform: translate(0, toRem(-10));
+            visibility: visible;
+            pointer-events: all;
+          }
+        }
+      }
     }
   }
 
   // .nav__link
   &__link {
+    display: inline-flex;
+    column-gap: toRem(5);
+    align-items: center;
   }
+
+  // .nav__icon
+  &__icon {
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: toRem(2);
+    vertical-align: middle;
+    border-top: toRem(4) dashed;
+    border-right: toRem(4) solid transparent;
+    border-left: toRem(4) solid transparent;
+  }
+
 }
 
 .submenu {
-
   // .submenu__list
   &__list {
+    text-align: left;
+    min-width: toRem(240);
+    background-color: rgba(9, 18, 66, 0.65);
+
+    @media (max-width: $tablet-breakpoint) {
+      text-align: right;
+      background-color: inherit;
+    }
   }
 
   // .submenu__item
   &__item {
+    @media (any-hover: hover) {
+      &:hover {
+        .submenu__link {
+          background-color: rgba(131, 141, 171, 0.6);
+        }
+      }
+    }
+
+    &:not(:last-child) {
+      margin-bottom: toEm(2);
+    }
   }
 
   // .submenu__link
   &__link {
+    display: block;
+    padding: toRem(13) toRem(13) toRem(13) toRem(30);
   }
 }
 
@@ -428,6 +500,10 @@ body {
   &__social {
     @extend %dis-flex-between;
     column-gap: toRem(22);
+
+    @media (max-width: $tablet-breakpoint) {
+      display: none;
+    }
   }
 
   // .side-info__link
@@ -442,12 +518,60 @@ body {
     line-height: 1.3;
     text-align: center;
     text-transform: capitalize;
-    transition: color 0.4s;
+    transition: all 0.3s ease;
     z-index: 50;
+
+    position: relative;
+    overflow: hidden;
+
+    //&:after {
+    //  content: '';
+    //  position: absolute;
+    //  z-index: -1;
+    //  pointer-events: none;
+    //  width: toRem(206);
+    //  height: toRem(206);
+    //  left: toRem(74);
+    //  right: toRem(-86);
+    //  top: toRem(-43);
+    //  bottom: toRem(-103);
+    //  border-radius: 50%;
+    //  //background: linear-gradient(146deg, rgba(2, 5, 60, 1) 24%, rgba(16, 30, 125, 1) 58%, rgba(36, 39, 70, 1) 86%);
+    //  //background-color: rgba(9, 18, 66, 0.65);
+    //  opacity: 0;
+    //  transform: scaleX(0);
+    //  //transform: rotate(180deg);
+    //  //transform: translate(50px, 5%);
+    //  transform-origin: right;
+    //  transition: transform 0.6s, opacity 1.1s;
+    //}
+    //
+    //@media (any-hover: hover) {
+    //  &:hover {
+    //    color: $white-color;
+    //  }
+    //
+    //  &:hover::after {
+    //    content: '';
+    //    opacity: 1;
+    //    transform: scaleX(1.5);
+    //    //transform: rotate(-30deg);
+    //    //transform: translate(100px, 50%);
+    //  }
+    //}
+    //
+    //@media (any-hover: none) {
+    //  &:active::after {
+    //    content: '';
+    //    opacity: 1;
+    //    transform: scaleX(1);
+    //    transition: transform 0s, opacity 0s;
+    //  }
+    //}
 
     @media (any-hover: hover) {
       &:hover {
-        background-color: rgba(9, 18, 66, 0.66);
+        background-color: rgba(9, 18, 66, 0.54);
         color: $white-color;
       }
     }
@@ -464,15 +588,27 @@ body {
     }
 
     @media (max-width: $M-mob-bp) {
+      padding: toEm(11) toEm(12);
+      right: toEm(75);
+    }
+
+    @media (max-width: toEm(396.98)) {
       display: none;
-      //.menu-open & {
-      //  //position: relative;
-      //  //display: block;
-      //  //bottom: toEm(50);
-      //  //left: toEm(30);
-      //}
     }
   }
+
+  //// .side-info__icon-get
+  //&__icon-get {
+  //  width: toRem(10);
+  //  height: toRem(10);
+  //  flex: 0 1 toRem(10);
+  //  @extend %image-size;
+  //  display: none;
+  //
+  //  @media (max-width: toEm(396.98)) {
+  //    display: block;
+  //  }
+  //}
 
   // .side-info__button
   &__button {
@@ -567,13 +703,34 @@ body {
   &__item {
     display: inherit;
     flex-shrink: 0;
-    transition: all 0.4s;
+    transition: all 0.3s ease;
+    transform: scale(1.002);
 
     img {
       @extend %image-size;
       width: toRem(19);
       height: toRem(19);
       flex: 0 1 toRem(19);
+    }
+
+    @media (any-hover: hover) {
+      &:hover {
+        transform: scale(1.2);
+
+        &:before {
+          content: '';
+          background-color: rgba(9, 18, 66, 0.65);
+          padding: toRem(17);
+          text-align: center;
+          border-radius: 8%;
+          position: absolute;
+          z-index: -1;
+          width: 100%;
+          height: 100%;
+          top: toEm(-6);
+          left: toEm(-6);
+        }
+      }
     }
   }
 }
@@ -582,26 +739,41 @@ body {
 //-------------------------------MAIN.PAGE--------------------------------
 //------------------------------------------------------------------------
 .page {
-  padding: toRem(140) 0;
+  padding-top: toRem(150);
+
+  @media (max-width: toEm(1007.98)) {
+    //padding-top: toRem(120);
+    padding-top: toRem(59);
+  }
   // .page__hero
   &__hero {
   }
+
+  // .page__services
+  &__services {
+    padding: toRem(96) 0;
+  }
 }
 
+//-------------------------------HERO--------------------------------
+//------------------------------------------------------------------------
 .hero {
   position: relative;
   z-index: 5;
-  min-height: #{calc(100dvh - toRem(177))};
+  min-height: #{calc(100dvh - toRem(190))};
 
   // .hero__container
   &__container {
-    max-width: toRem(2900);
+
   }
 
   // .hero__background
   &__background {
-    padding-top: toRem(132);
-    //aspect-ratio: 1995 / 995;
+  }
+
+  // .hero__info
+  &__info {
+    position: relative;
   }
 }
 
@@ -613,6 +785,241 @@ body {
     object-fit: cover;
     @extend %photo-absolute;
     @extend %image-size;
+  }
+}
+
+.info {
+  // .info__body
+  &__body {
+    color: $white-color;
+    max-width: toRem(485);
+    padding-top: toRem(150);
+    padding-bottom: toRem(150);
+  }
+}
+
+.body-hero {
+  // .body-hero__title
+  &__title {
+    min-width: #{calc(50% + toRem(9))};
+    //min-width: 50%;
+    background: rgba(4, 28, 55, 0.5);
+
+    &:not(:last-child) {
+      margin-bottom: toRem(17);
+    }
+  }
+
+
+  // .body-hero__subtitle
+  &__subtitle {
+    font-family: $secondary-font;
+    font-size: toRem(60);
+    font-weight: 700;
+    line-height: 1.1;
+
+    &:not(:last-child) {
+      margin-bottom: toRem(20);
+    }
+  }
+
+  > p {
+    font-family: $basic-font;
+    font-size: toRem(14);
+
+    &:not(:last-of-type) {
+      margin-bottom: toRem(12);
+    }
+
+    &:not(:last-child) {
+      margin-bottom: toRem(27);
+    }
+  }
+
+  // .body-hero__link
+  &__link {
+    flex-shrink: 0;
+    display: inline-block;
+    padding: toEm(19) toEm(34);
+    color: rgb(35, 33, 42);
+    font-family: $basic-font;
+    font-size: toRem(16);
+    font-weight: 600;
+    line-height: 1.3;
+    text-transform: capitalize;
+    transition: all 0.8s;
+    background: linear-gradient(126.56deg, rgb(255, 182, 41) -1.21%, rgb(255, 218, 86) 58.664%, rgb(255, 215, 166) 116.841%);
+    position: relative;
+    z-index: 5;
+    overflow: hidden;
+
+    &:after {
+      content: '';
+      position: absolute;
+      z-index: -1;
+      pointer-events: none;
+      width: toRem(206);
+      height: toRem(206);
+      left: toRem(74);
+      right: toRem(-86);
+      top: toRem(-43);
+      bottom: toRem(-103);
+      border-radius: 50%;
+      background: $white-color;
+      opacity: 0;
+      transform: scaleX(0);
+      transform-origin: right;
+      transition: transform 0.6s, opacity 1.3s;
+    }
+
+    @media (any-hover: hover) {
+      &:hover::after {
+        content: '';
+        opacity: 1;
+        transform: scaleX(1);
+      }
+    }
+
+    @media (any-hover: none) {
+      &:active::after {
+        content: '';
+        opacity: 1;
+        transform: scaleX(1);
+        transition: transform 0s, opacity 0s;
+      }
+    }
+  }
+}
+
+.title {
+  display: inline-flex;
+  align-items: center;
+  column-gap: toRem(9);
+  justify-content: start;
+  text-transform: capitalize;
+  font-family: $secondary-font;
+  font-size: toRem(14);
+
+  &:before {
+    content: '';
+    flex: 0 1 toRem(4);
+    width: toRem(4);
+    height: toRem(23);
+    background: linear-gradient(126.56deg, rgb(255, 182, 41) 20.708%, rgb(255, 218, 86) 66.546%, rgb(255, 215, 166) 111.085%);
+  }
+}
+
+//------------------------------SERVICES---------------------------------
+//-----------------------------------------------------------------------
+.services {
+  // .services__container
+  &__container {
+    display: flex;
+    column-gap: toRem(40);
+  }
+
+  // .services__body
+  &__body {
+
+  }
+
+  // .services__cards
+  &__cards {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    row-gap: toRem(70);
+    column-gap: toRem(70);
+  }
+}
+
+.body {
+  max-width: toRem(295);
+  min-height: toRem(94);
+  // .body__title
+  &__title {
+    min-width: #{calc(30% + toRem(9))};
+    background: rgba(232, 232, 232, 0.5);
+    color: rgb(28, 31, 53);
+
+    &:not(:last-child) {
+      margin-bottom: toRem(17);
+    }
+  }
+
+  // .body__subtitle-serv
+  &__subtitle-serv {
+    color: rgb(28, 31, 53);
+    font-family: $secondary-font;
+    font-size: toRem(35);
+    font-weight: 600;
+    line-height: 1.1;
+  }
+}
+
+.card {
+  // .card__item
+  &__item {
+    //max-width: toRem(400);
+    display: flex;
+    align-items: center;
+    column-gap: toRem(50);
+
+  }
+}
+
+.item {
+  // .item__image-card
+  &__image-card {
+    flex: 0 1 toRem(75);
+    width: toRem(75);
+    height: toRem(115);
+    object-fit: contain;
+    object-position: center;
+    @extend %image-size;
+  }
+
+  // .item__info
+  &__info {
+    max-width: toRem(270);
+    position: relative;
+
+    &:before {
+      content: '';
+      display: inline-block;
+      position: absolute;
+      top: toEm(50);
+      right: 90%;
+      flex: 0 1 toRem(100);
+      width: toRem(100);
+      height: toRem(0.5);
+      transform: rotate(90deg);
+      border: 1px solid rgb(216, 216, 216);
+    }
+
+    p {
+      color: rgb(102, 108, 137);
+      font-family: $basic-font;
+      font-size: toRem(16);
+      font-weight: 500;
+      line-height: 1.5;
+
+      &:not(:last-of-type) {
+        margin-bottom: toRem(9);
+      }
+    }
+  }
+}
+
+.info {
+  // .info__about
+  &__about {
+    color: rgb(28, 31, 53);
+    font-family: $secondary-font;
+    font-size: toRem(25);
+
+    &:not(:last-child) {
+      margin-bottom: toRem(13);
+    }
   }
 }
 
